# MyLastWork

./: CMakeLists.txt  Microscope.cpp  Microscope.h  Microscope.ui  main.cpp
src/myclass/: MyCamera.cpp  MyCamera.h
